--- a/html/2.1 filmovi.html
+++ b/html/2.1 filmovi.html
@@ -5,8 +5,6 @@
 		<title>FF - Filmovi</title>
 		<link rel="icon" href="../images/circle-logo.png">
 
-		
-		<script src="../js/main.js"></script>
 
 		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -15,10 +13,10 @@
 		<link rel="stylesheet" href="../css/styles.css" type="text/css">
 		<link rel="stylesheet" href="../css/cards-style.css" type="text/css">
 
-
+		<script src="../js/main.js"></script>
 	</head>
 	
-	<body onLoad="refreshRezervacije()">
+	<body onLoad="filmovi_onload()">
 		
 		<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		<!--Header-->
@@ -106,6 +104,7 @@
 						</div>
 						<br>
 				</div>
+
 				<div class="col-12 col-md-6">
 					<!--CARD 2.1-->
 				    <div class="example-2 card">
@@ -129,6 +128,7 @@
 				      </div>
 				    </div>
 				</div>
+
 				<div class="col-12 col-md-6">
 				    <!--CARD 2.2-->
 				    <div class="example-2 card">
