--- a/html/2.1.1 film.html
+++ b/html/2.1.1 film.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="../lightbox2-master/dist/css/lightbox.min.css">
 	</head>
 	
-	<body onLoad="refreshFilm('film_1_Skver')"><!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+	<body onLoad="refreshFilm('brrezervacija_film_1_Skver')"><!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		<!--Header-->
 		<header>
 			<div class="row" style="background-image: url('../images/back2.jpg');background-size:cover;width:100%;margin:0px;">
@@ -103,13 +103,13 @@
 						  <h1>Skver</h1>
 						  <form name="forma_mojifilmovi">
 							  <div class="btn-group-toggle" data-toggle="buttons">
-								  <label class="btn btn-warning btn-sm active">
-								    <input type="checkbox" checked autocomplete="off" onClick="dodajFilm()"><span style="color:white"> Dodaj u "Moje filmove"</span>
+								  <label class="btn btn-warning btn-sm active" onClick="dodajOmiljeni('omiljeni_film_1_Skver')">
+								    <input type="checkbox" checked autocomplete="off" onClick="dodajOmiljeni('omiljeni_film_1_Skver')"><span style="color:white"> Dodaj u "Moje filmove"</span>
 								  </label>
 							  </div>
 						  </form>
 						  <br>
-						  <p>Broj rezervacija: <font color="orange"><span id="br_rezervacija"> x </span> </font></p>            
+						  <p>Broj rezervacija: <font color="orange"><span id="br_rezervacija"> </span> </font></p>            
 						  <table class="table table-bordered">
 						    <tbody>
 						      <tr>
@@ -209,7 +209,7 @@
 										<td><input type="text" class="form-control" placeholder="0" id="br_karata"></td>
 									</tr>
 									<tr class="rezervacija-col">
-										<td colspan="2"><br><center><input type="button" class="btn btn-secondary-outline" value="Rezervisi" onClick="rezervisi('film_1_Skver','2')"></center></td>
+										<td colspan="2"><br><center><input type="button" class="btn btn-secondary-outline" value="Rezervisi" onClick="rezervisi('brrezervacija_film_1_Skver','2')"></center></td>
 									</tr>
 								</table>
 								
