--- a/html/4 vesti.html
+++ b/html/4 vesti.html
@@ -127,7 +127,7 @@
 									Prvih sedam dana prodaje odobrava se 10% popusta na komplete karata po terminskim linijama.
 								</p>
 								<p>
-									<a href="prodajna_mesta.html">Prodajna mesta</a>
+									<a href="2.3 prodajna_mesta.html">Prodajna mesta</a>
 								</p>
 					        </div>
 					      </div>
