--- a/html/2.1.2 film.html
+++ b/html/2.1.2 film.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="../lightbox2-master/dist/css/lightbox.min.css">
 	</head>
 	
-	<body onLoad="refreshFilm('film_2_Tri Bilborda ispred Ebinga u Misuriju')"><!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+	<body onLoad="refreshFilm('brrezervacija_film_2_Tri Bilborda ispred Ebinga u Misuriju')"><!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		<!--Header-->
 		<header>
 			<div class="row" style="background-image: url('../images/back2.jpg');background-size:cover;width:100%;margin:0px;">
@@ -102,8 +102,8 @@
 						  <h1>Tri bilborda ispred Ebinga u Misuriju</h1>
 						  <form name="forma_mojifilmovi">
 							  <div class="btn-group-toggle" data-toggle="buttons">
-								  <label class="btn btn-warning btn-sm active">
-								    <input type="checkbox" checked autocomplete="off" onClick="dodajFilm()"><span style="color:white"> Dodaj u "Moje filmove"</span>
+								  <label class="btn btn-warning btn-sm active" onClick="dodajOmiljeni('omiljeni_film_2_Tri Bilborda ispred Ebinga u Misuriju')">
+								    <input type="checkbox" checked autocomplete="off" onClick="dodajOmiljeni('omiljeni_film_2_Tri Bilborda ispred Ebinga u Misuriju')"><span style="color:white"> Dodaj u "Moje filmove"</span>
 								  </label>
 							  </div>
 						  </form>
@@ -206,7 +206,7 @@
 										<td><input type="text" class="form-control" placeholder="0" id="br_karata"></td>
 									</tr>
 									<tr class="rezervacija-col">
-										<td colspan="2"><br><center>.<input type="button" class="btn btn-secondary-outline" value="Rezervisi" onClick="rezervisi('film_2_Tri Bilborda ispred Ebinga u Misuriju','2')"></center></td>
+										<td colspan="2"><br><center>.<input type="button" class="btn btn-secondary-outline" value="Rezervisi" onClick="rezervisi('brrezervacija_film_2_Tri Bilborda ispred Ebinga u Misuriju','2')"></center></td>
 									</tr>
 								</table>
 								
