Sortiranje zavrseno + mapa na filmu demo
Sortiranje radi okej koliko sam probao, pogledaj malo kod nije neka mudrost malo je hardkod...
Ova mapa mi se cini da je ok,
iframe mi ne radi za yt, a ni neki embed koji sam nasao na bootstrapu.

Sad cu da odradim mapu na svim stranicama i da popravim one sitnice sto sam rekao na pocetku jutros

--- a/html/5 mojifilmovi.html
+++ b/html/5 mojifilmovi.html
@@ -98,9 +98,9 @@
 						<hr>
 						<div id="myBtnContainer">
 						  <p>Sortiraj po
-						  <button class="btn btn-sm active" onclick="filterMojiFilmovi('1')"> po nazivu filma</button>
-						  <button class="btn btn-sm" onclick="filterMojiFilmovi('2')"> po mestu projekcije</button>
-						  <button class="btn btn-sm" onclick="filterMojiFilmovi('3')"> po broju rezervacija</button>
+						  <button class="btn btn-sm active" onclick="sortirajOmiljenePoNazivu()"> po nazivu filma</button>
+						  <button class="btn btn-sm" onclick="sortirajOmiljenePoMestu()"> po mestu projekcije</button>
+						  <button class="btn btn-sm" onclick="sortirajOmiljenePoBrRez()"> po broju rezervacija</button>
 						  </p>
 						</div>
 						<br>
