Sitnije izmene, trebalo bi da je toto

--- a/html/2.2 mesta_projekcija.html
+++ b/html/2.2 mesta_projekcija.html
@@ -100,9 +100,11 @@
 							
 					<h2>Sava Centar</h2>
 					<p style="font-size:calc(12px + 0.3vw);">	
-					Sava Centar (Serbian: Сава Центар) is an international congress, cultural and business centre of various multi-functional activities located in Belgrade,
-					the capital of Serbia. It is the largest audience hall in the country and entire former Yugoslavia and one of the biggest in Europe.
-					It has been host to numerous large-scale events and performances.
+					Sava centar (Centar „Sava“) je kongresni, kulturni i poslovni centar, namenjen za raznovrsne multifunkcionalne aktivnosti, koji se nalazi u glavnom gradu Srbije, Beogradu.
+					On ima salu za publiku koja je najveća u celoj zemlji, kao i u bivšoj Jugoslaviji.
+					Sava centar ima 69.300 m² korisnog i 100.000 m² ukupnog prostora, 
+					uključujući koncertnu salu sa 3.672 sedišta, 15 konferencijskih sala, izložbeni prostor, 
+					kao i brojne druge objekte. On godišnje ugosti više od pola miliona posetilaca.
 					</p>		
 				</div>
 				<div class="col-6">
