Latinica sredjena za sve browsere

--- a/html/1.1 ziri.html
+++ b/html/1.1 ziri.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		
-		<title>FF - Ziri</title>
+		<title>FF - Žiri</title>
 		<link rel="icon" href="../images/circle-logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -50,7 +51,7 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link a-link" href="index.html" >Pocetna</a>
+							<a class="nav-link a-link" href="index.html" >Naslovna</a>
 						</li>
 						
 						<li class="nav-item dropdown active">
@@ -88,15 +89,15 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="jumbotron">
-						<h1>Ziri film fest-a</h1>
+						<h1>Žiri film fest-a</h1>
 						<br>
 						<div class="card">
 							<div class="card-body">
 								<div class="media">
 								  <img class="mr-3" src="../images/ziri/ziri1.jpg" alt="Ziri slika" width="25%">
 								  <div class="media-body">
-								    <h4 class="mt-0"><a class="ziri-link">Milco Mancevski</a></h4>
-								    <span class="badge badge-warning">Predsednik zirija</span>
+								    <h4 class="mt-0"><a class="ziri-link">Milčo Mančevski</a></h4>
+								    <span class="badge badge-warning">Predsednik žirija</span>
 								    <hr>
 								    <a href="#z1" class="btn btn-dark" data-toggle="collapse">Saznaj vise</a>
 									 <div id="z1" class="collapse">
@@ -115,8 +116,8 @@
 								<div class="media">
 								  <img class="mr-3" src="../images/ziri/ziri2.jpg" alt="Ziri slika" width="25%">
 								  <div class="media-body">
-								    <h4 class="mt-0"><a class="ziri-link">Mila Turajlic</a></h4>
-								    <span class="badge badge-info">Clan zirija</span>
+								    <h4 class="mt-0"><a class="ziri-link">Mila Turajlić</a></h4>
+								    <span class="badge badge-info">Član zirija</span>
 								    <hr>
 								    <a href="#z2" class="btn btn-dark" data-toggle="collapse">Saznaj vise</a>
 									 <div id="z2" class="collapse">
@@ -135,8 +136,8 @@
 								<div class="media">
 								  <img class="mr-3" src="../images/ziri/ziri3.gif" alt="Ziri slika" width="25%">
 								  <div class="media-body">
-								    <h4 class="mt-0"><a class="ziri-link">Jovan Jovanovic</a></h4>
-								    <span class="badge badge-info">Clan zirija</span>
+								    <h4 class="mt-0"><a class="ziri-link">Jovan Jovanović</a></h4>
+								    <span class="badge badge-info">Član zirija</span>
 								    <hr>
 								    <a href="#z3" class="btn btn-dark" data-toggle="collapse">Saznaj vise</a>
 									 <div id="z3" class="collapse">
@@ -155,8 +156,8 @@
 								<div class="media">
 								  <img class="mr-3" src="../images/ziri/ziri4.jpg" alt="Ziri slika" width="25%">
 								  <div class="media-body">
-								    <h4 class="mt-0"><a class="ziri-link">Gordan Kicic</a></h4>
-								    <span class="badge badge-info">Clan zirija</span>
+								    <h4 class="mt-0"><a class="ziri-link">Gordan Kičić</a></h4>
+								    <span class="badge badge-info">Član zirija</span>
 								    <hr>
 								    <a href="#z4" class="btn btn-dark" data-toggle="collapse">Saznaj vise</a>
 									 <div id="z4" class="collapse">
@@ -175,8 +176,8 @@
 								<div class="media">
 								  <img class="mr-3" src="../images/ziri/ziri5.jpg" alt="Ziri slika" width="25%">
 								  <div class="media-body">
-								    <h4 class="mt-0"><a class="ziri-link">Elma Tataragic</a></h4>
-								    <span class="badge badge-info">Clan zirija</span>
+								    <h4 class="mt-0"><a class="ziri-link">Elma Tataragić</a></h4>
+								    <span class="badge badge-info">Član zirija</span>
 								    <hr>
 								    <a href="#z5" class="btn btn-dark" data-toggle="collapse">Saznaj vise</a>
 									 <div id="z5" class="collapse">
@@ -228,7 +229,7 @@
 				<div class="col-8" align="right" style="padding:5px">
 					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
-						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
+						Jakov Jezdić i Marko Hudomal, Odsek za Softversko inženjerstvo Elektrotehničkog fakulteta univerziteta u Beogradu
 					<i>
 				</div>				
 		</footer>	
