--- a/html/1.4 kontakt.html
+++ b/html/1.4 kontakt.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		
 		<title>FF - Kontakt</title>
 		<link rel="icon" href="../images/circle-logo.png">
@@ -49,7 +50,7 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link a-link" href="index.html" >Pocetna</a>
+							<a class="nav-link a-link" href="index.html" >Naslovna</a>
 						</li>
 						
 						<li class="nav-item dropdown active">
@@ -124,13 +125,13 @@
 						<h3>Kontakt informacije</h3>
 						<hr>
 						<h5>Odbor festivala:</h5>
-						<p><strong>Jakov Jezdic</strong> : 063333333; <br>&nbsp;&nbsp;(email: jakovjezdic@gmail.com)</p>
-						<p><strong>Marko Hudomal</strong>: 064444444; <br>&nbsp;&nbsp;(email: markohudomal@gmail.com)</p>
+						<p><strong>Jakov Jezdić</strong> : 063333333; <br>&nbsp;&nbsp;(email: jakovjezdic(et)gmail.com)</p>
+						<p><strong>Marko Hudomal</strong>: 064444444; <br>&nbsp;&nbsp;(email: markohudomal(et)gmail.com)</p>
 						<br>
 						<h5></h5>
 					</div>
 					<div class="alert alert-info" style="height:150px;">
-							Od sada mozete kontaktirati nasu centralnu liniju: <strong>+381 11 2136651</strong>
+							Od sada mozete kontaktirati našu centralnu liniju: <strong>+381 11 2136651</strong>
 					</div>
 					
 				</div>
@@ -167,7 +168,7 @@
 				<div class="col-8" align="right" style="padding:5px">
 					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
-						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
+						Jakov Jezdić i Marko Hudomal, Odsek za Softversko inženjerstvo Elektrotehničkog fakulteta univerziteta u Beogradu
 					<i>
 				</div>				
 		</footer>	
