--- a/html/2.1 filmovi.html
+++ b/html/2.1 filmovi.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		
+		<meta charset="UTF-8">
+
 		<title>FF - Filmovi</title>
 		<link rel="icon" href="../images/circle-logo.png">
 
@@ -54,7 +55,7 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link a-link" href="index.html" >Pocetna</a>
+							<a class="nav-link a-link" href="index.html" >Naslovna</a>
 						</li>
 						
 						<li class="nav-item dropdown">
@@ -336,7 +337,7 @@
 				<div class="col-8" align="right" style="padding:5px">
 					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
-						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
+						Jakov Jezdić i Marko Hudomal, Odsek za Softversko inženjerstvo Elektrotehničkog fakulteta univerziteta u Beogradu
 					<i>
 				</div>				
 		</footer>	
