--- a/html/2.1.3 film.html
+++ b/html/2.1.3 film.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
+		
 		<title>FF - Advokat</title>
 		<link rel="icon" href="../images/circle-logo.png">
 
@@ -250,9 +252,10 @@
 			</div>
 
 		</div>
-			<hr>
-			<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+		<hr>
+		<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		<!--Footer-->
+
 		<footer>
 			<div class="row" style="margin:0px;padding:5px;">
 				
@@ -280,7 +283,7 @@
 				<div class="col-8" align="right" style="padding:5px">
 					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
-						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
+						Jakov Jezdić i Marko Hudomal, Odsek za Softversko inženjerstvo Elektrotehničkog fakulteta univerziteta u Beogradu
 					<i>
 				</div>				
 		</footer>	
