--- a/html/2.2 mesta_projekcija.html
+++ b/html/2.2 mesta_projekcija.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		
+		<meta charset="UTF-8">
+
 		<title>FF - Mesta projekcija</title>
 		<link rel="icon" href="../images/circle-logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
@@ -50,7 +51,7 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link a-link" href="index.html" >Pocetna</a>
+							<a class="nav-link a-link" href="index.html" >Naslovna</a>
 						</li>
 						
 						<li class="nav-item dropdown">
@@ -165,10 +166,9 @@
 				<div class="col-8" align="right" style="padding:5px">
 					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
-						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
+						Jakov Jezdić i Marko Hudomal, Odsek za Softversko inženjerstvo Elektrotehničkog fakulteta univerziteta u Beogradu
 					<i>
-				</div>	
-			</div>
+				</div>				
 		</footer>	
 		<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		
