--- a/html/2.3 prodajna_mesta.html
+++ b/html/2.3 prodajna_mesta.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		
+		<meta charset="UTF-8">
+
 		<title>FF - Prodajna mesta</title>
 		<link rel="icon" href="../images/circle-logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
@@ -50,7 +51,7 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link a-link" href="index.html" >Pocetna</a>
+							<a class="nav-link a-link" href="index.html" >Naslovna</a>
 						</li>
 						
 						<li class="nav-item dropdown">
@@ -134,14 +135,14 @@
 					<div class="jumbotron" style="padding:20px;padding-left:20px;padding-right:20px;background-size:cover; background-image: url('./img/brown-gradient.png');">
 						<h3>Sava centar</h3>
 						<hr>
-						Milentija Popovica 9, Beograd<br>
+						Milentija Popovića 9, Beograd<br>
 						<a href="http://www.savacentar.net">savacentar.net</a><br>
 						10:00 - 18:00
 						<br>
 						<h5></h5>
 					</div>
 					<div class="jumbotron" style="padding:20px;padding-left:20px;padding-right:20px;background-size:cover; background-image: url('./img/brown-gradient.png');">
-						<h3>Dom omladine</h3>
+						<h3>Dom Omladine</h3>
 						<hr>
 						Makedonska 22, Beograd<br>
 						<a href="http://www.domomladine.org">domomladine.org</a><br>
@@ -152,7 +153,7 @@
 					<div class="jumbotron" style="padding:20px;padding-left:20px;padding-right:20px;background-size:cover; background-image: url('./img/brown-gradient.png');">
 						<h3>Eventim</h3>
 						<hr>
-						Bulevar Arsenija Carnojevica 58, Beograd<br>
+						Bulevar Arsenija Čarnojevića 58, Beograd<br>
 						<a href="http://www.eventim.rs/rs/">eventim.rs</a><br>
 						10:00 - 18:00
 						<br>
@@ -194,7 +195,7 @@
 				<div class="col-8" align="right" style="padding:5px">
 					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
-						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
+						Jakov Jezdić i Marko Hudomal, Odsek za Softversko inženjerstvo Elektrotehničkog fakulteta univerziteta u Beogradu
 					<i>
 				</div>				
 		</footer>	
