--- a/html/2.1.5 film.html
+++ b/html/2.1.5 film.html
@@ -21,8 +21,8 @@
 			<div class="row" style="background-image: url('../images/back2.jpg');background-size:cover;width:100%;margin:0px;">
 				<div class="col-lg-12">
 					<div class="float-right" style="padding:1%;">
-							<a href="index.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
-							<a href="index_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
+							<a href="2.1.5 film.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
+							<a href="2.1.5 film_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
 					</div>
 				</div>
 				<div class="col-4 col-lg-2">
