--- a/html/4 vesti.html
+++ b/html/4 vesti.html
@@ -25,8 +25,8 @@
 			<div class="row" style="background-image: url('../images/back2.jpg');background-size:cover;width:100%;margin:0px;">
 				<div class="col-lg-12">
 					<div class="float-right" style="padding:1%;">
-							<a href="index.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
-							<a href="index_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
+							<a href="4 vesti.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
+							<a href="4 vesti_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
 					</div>
 				</div>
 				<div class="col-4 col-lg-2">
