--- a/html/3.3 glumac_eng.html
+++ b/html/3.3 glumac_eng.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<script language="javascript">
-			function change() {
-				document.location.href = "index.html";
-			}
-		
-		</script>
-		<title>FF - Home</title>
+		<meta charset="UTF-8">
+
+		<title>FF - Denzel Washington</title>
+		<link rel="icon" href="../images/circle-logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,14 +12,14 @@
 		
 	</head>
 	
-	<body >
-	
+	<body ><!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+		<!--Header-->
 		<header>
 			<div class="row" style="background-image: url('../images/back2.jpg');background-size:cover;width:100%;margin:0px;">
 				<div class="col-lg-12">
 					<div class="float-right" style="padding:1%;">
-							<a href="index.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
-							<a href="index_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
+							<a href="3.3 glumac.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
+							<a href="3.3 glumac_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
 					</div>
 				</div>
 				<div class="col-4 col-lg-2">
@@ -47,7 +44,7 @@
 				<!-- likovi -->
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link a-link" href="index_eng.html" >Home</a>
 						</li>
 						
@@ -80,32 +77,63 @@
 					</ul>
 				</div> 
 			</nav>
-		
+		<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
 		<div class="container" style="padding-top:20px;">
 			<div class="row">
-				<div class="col-md-12">
-					<div class="jumbotron" style="background-size:cover;background-image: url('../images/naslovna.jpg'); padding-top: 180px">
-						<div class="jumbotron" style="padding-top: 5%" >
-							<h1>Welcome to official Film Fest website</h1><br>
-							<p>The first film-fest will be opened on June 1, 2018 in Dom Omladine, screening the film "Advocate" Dana Gilroy.
-								Imagined as an annual cross-section of the best movies of the season, we believe that the film festival will be
-								<i> Film fest </i> grows into one of the most important film reviews and become one of the main events,
-								with whom many new young generations will grow.
-							</p>
-							<hr>
-							<p>On this site you can find all information related to the festival itself,
-								jury, awards, sponsors, contacts, actors, films ..
-
-							</p>
-						</div>
-					</div>
+				<div class="col-12">
+					<ul class="breadcrumb">
+						<li class="breadcrumb-item"><a href="3 glumci_eng.html" class="breadcrumb-link">Actors</a></li>
+						<li class="breadcrumb-item active">Denzel Washington</li>
+					</ul>
 				</div>
 			</div>
+			<div class="row">
+					<div class="media actor-media">
+						<div class="col-3 col-lg-6">
+						<div class="media-left">
+							<img class="alone-actor-img rounded-circle" src="../images/glumci/glumac3.jpg">
+						</div>
+						</div>
+						<div class="col-9 col-lg-6">
+						<div class="media-body">
+							<div class="media-text">
+								<center>
+								
+									<p class="paragraph">
+										<strong>Denzel Washington</strong>
+										    was born in Mount Vernon (New York).
+											His father was a priest, and the mother owns a hairdresser's salon.
+											When he was a boy, his parents forbade him to watch movies.
+											Later he had problems with the law and was detained with a few
+											their comrades. His mother then sends him to the test school, and later on
+											Fordam University, where he discovered his acting talent and on which
+											graduated in 1977.
+									</p>
+									<hr>
+									<p class="paragraph">His first role was in Vilma's TV movie.
+											During the filming of this film he met with Polet Pirson (now Fletcher Washington)
+											with whom he later married. He cast his attention to the public acting in TV drama St.
+											Elsewhere, and one of the few actors who remained until the end of this series in
+											its six-year duration. He later became a member of The Glory for
+											who won the Oscars in 1989 for a secondary male role.
+									</p>
+									<p class="paragraph">
+										After this film, his popularity grows well
+										gets better roles in movies such as: Malkom Iks
+										(1992), Philadelphia (1993), Posrnuli (1998), Bone collector
+										(1999) and Training Day (2001) when she gets her second Oscar, this time for the main male role.
+									</p>
+								</center>
+							</div>
+						</div>
+						</div>
+					</div>
+			</div>
+			
+			</div>
 		</div>
-		<br>
 		<hr>
-
-
 		<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		<!--Footer-->
 
@@ -140,7 +168,12 @@
 						Faculty of Electrical Engineering, University of Belgrade
 					<i>
 				</div>				
-		</footer>
+		</footer>	
+		<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+		
+		
+		
+		
 		
 
 	
@@ -152,5 +185,5 @@
 	
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
+	</body>
 </html>
