--- a/html/2.1.5 film_eng.html
+++ b/html/2.1.5 film_eng.html
@@ -185,11 +185,11 @@
 								<table>
 									<tr class="rezervacija-col">
 										<td>First name &nbsp;</td>
-										<td><input type="text" class="form-control" placeholder="Ime" id="ime"></td>
+										<td><input type="text" class="form-control" placeholder="First name" id="ime"></td>
 									</tr>
 									<tr class="rezervacija-col">
 										<td>Last name &nbsp;</td>
-										<td><input type="text" class="form-control" placeholder="Prezime" id="prezime"></td>
+										<td><input type="text" class="form-control" placeholder="Last name" id="prezime"></td>
 									</tr>
 									<tr class="rezervacija-col">
 										<td>E-mail &nbsp;</td>
