Last name First name u Name i Surname

--- a/html/2.1.2 film_eng.html
+++ b/html/2.1.2 film_eng.html
@@ -178,12 +178,12 @@
 							<form name="rezervacija">
 								<table>
 									<tr class="rezervacija-col">
-										<td>First name &nbsp;</td>
-										<td><input type="text" class="form-control" placeholder="First name" id="ime"></td>
+										<td>Name &nbsp;</td>
+										<td><input type="text" class="form-control" placeholder="Name" id="ime"></td>
 									</tr>
 									<tr class="rezervacija-col">
-										<td>Last name &nbsp;</td>
-										<td><input type="text" class="form-control" placeholder="Last name" id="prezime"></td>
+										<td>Surname &nbsp;</td>
+										<td><input type="text" class="form-control" placeholder="Surname" id="prezime"></td>
 									</tr>
 									<tr class="rezervacija-col">
 										<td>E-mail &nbsp;</td>
