Glumci objedinjeno html

--- a/html/3 glumci_eng.html
+++ b/html/3 glumci_eng.html
@@ -160,7 +160,7 @@
 						<div class="card-body">
 							<div class="card-text">
 								<center><strong><i>Colin James Farrell</i></strong></center>
-								<center>(Dublin, May 31, 1976) Irish is an actor.</center>
+								<center>(Dublin, May 31, 1976) is an Irish actor.</center>
 							</div>
 						</div>
 					</div>
