--- a/html/3.3 glumac_eng.html
+++ b/html/3.3 glumac_eng.html
@@ -65,7 +65,7 @@
 								 <a class="dropdown-item" href="2.3 prodajna_mesta_eng.html">	<img src="../images/dropdown-icons/ticket-icon.png" width="25px">&nbsp; Ticketing</a>
 							</div>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item active">
 							<a class="nav-link" href="3 glumci_eng.html">Actors</a>
 						</li>
 						<li class="nav-item">
