Finalno sredjivanje nekih minijaturnih stvari

--- a/html/1.4 kontakt_eng.html
+++ b/html/1.4 kontakt_eng.html
@@ -122,8 +122,8 @@
 						<h3>Contact Info</h3>
 						<hr>
 						<h5>Festival board:</h5>
-						<p><strong>Jakov Jezdić</strong> : 063333333; <br>&nbsp;&nbsp;(email: jakovjezdic(et)gmail.com)</p>
-						<p><strong>Marko Hudomal</strong>: 064444444; <br>&nbsp;&nbsp;(email: markohudomal(et)gmail.com)</p>
+						<p><strong>Jakov Jezdić</strong> : 063333333; <br>&nbsp;&nbsp;(email: jakovjezdic(at)gmail.com)</p>
+						<p><strong>Marko Hudomal</strong>: 064444444; <br>&nbsp;&nbsp;(email: markohudomal(at)gmail.com)</p>
 						<br>
 						<h5></h5>
 					</div>
